--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
